welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if(noDoubles==false) {
		return die1+die2
	}
	if (die1==die2&&noDoubles=true) {
			if (die1!=6) {
				die1=die1+1
			}
			else die1=1;
			if (die2!=6) {
				die2=die2+1
			}
			else die2=1
	}
}
